PGOV-1003 fix field spacing on semicolon inline lists

--- a/web/themes/custom/cloudy/src/css/drupal/_field.scss
+++ b/web/themes/custom/cloudy/src/css/drupal/_field.scss
@@ -68,6 +68,7 @@
 .field--name-field-topics {
   .field__items {
     display: block;
+    margin-bottom: spacer(1);
     .field__item {
       display: inline;
     }
